Fixed flaky test for recent target language.

This patch is exactly the same as
https://chromium-review.googlesource.com/757882 except for new logic in
NavigateToUrl.

Bug: 789593, 624604
Change-Id: I90cb4f640ca4296ae7d4a88bd17808ebe63566e9
Reviewed-on: https://chromium-review.googlesource.com/798816
Commit-Queue: Michael Martis <martis@chromium.org>
Reviewed-by: Renjie Liu <renjieliu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#520493}
Former-commit-id: e48850d972279a4ad261f741a21752f0f5ed7f1c